add jwt implementation

--- a/DirectDebitApi/appsettings.json
+++ b/DirectDebitApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;User ID=root;Password=test;Database=directde_appv2"
+    "DefaultConnection": "Server=directdebit.ng;User ID=directde_Admin;Password='gs(;a^Isk9IW';Database=directde_appv2"
   }
 }
