--- a/DirectDebitApi/DirectDebitApi.csproj
+++ b/DirectDebitApi/DirectDebitApi.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" NoWarn="NU1605" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" NoWarn="NU1605" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" NoWarn="NU1605" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.1" NoWarn="NU1605" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="MySql.Data" Version="8.0.22" />
@@ -41,5 +41,6 @@
     <Folder Include="Services\Mandate\" />
     <Folder Include="Services\Merchant\" />
     <Folder Include="Services\Payment\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 </Project>
