Added DB Auto migration

--- a/DirectDebitApi/appsettings.json
+++ b/DirectDebitApi/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=directdebit.ng;User ID=directde_Admin;Password='gs(;a^Isk9IW';Database=directde_appv2"
+    //"DefaultConnection": "Server=directdebit.ng;User ID=directde_Admin;Password='gs(;a^Isk9IW';Database=directde_appv2",
+    //"DefaultConnection": "Server=Mysql@127.0.0.1:3306;User ID=root;Password=Pa55w0rd;Database=directde_appv2",
+    "DefaultConnection": "server=localhost; port=3306; User ID=root;Password=Pa55w0rd;Database=directde_appv2"
   }
 }
