--- a/DirectDebitApi/appsettings.json
+++ b/DirectDebitApi/appsettings.json
@@ -9,7 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=directdebit.ng;User ID=directde_Admin;Password='gs(;a^Isk9IW';Database=directde_appv2",
-    //"DefaultConnection": "Server=Mysql@127.0.0.1:3306;User ID=root;Password=Pa55w0rd;Database=directde_appv2",
-    "DefaultConnection": "server=localhost; port=3306; User ID=root;Password=Pa55w0rd;Database=directde_appv2"
+    "DefaultConnection": "Server=localhost;User ID=root;Password='Diamondbank1';Database=directde_appv2"
   }
 }
