--- a/DirectDebitApi/DirectDebitApi.csproj
+++ b/DirectDebitApi/DirectDebitApi.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="MicroOrm.Dapper.Repositories" Version="1.15.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.3.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
   <ItemGroup>
