refactor response to use automapper

--- a/DirectDebitApi/DirectDebitApi.csproj
+++ b/DirectDebitApi/DirectDebitApi.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="MicroOrm.Dapper.Repositories" Version="1.15.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.3.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
