--- a/DirectDebitApi/appsettings.json
+++ b/DirectDebitApi/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=directdebit.ng;User ID=directde_Admin;Password='gs(;a^Isk9IW';Database=directde_appv2",
-    "DefaultConnection": "Server=localhost;User ID=root;Password='Diamondbank1';Database=directde_appv2"
+    "DefaultConnection": "Server=directdebit.ng;User ID=directde_Admin;Password='gs(;a^Isk9IW';Database=directde_appv2"
+    //"DefaultConnection": "Server=localhost;User ID=root;Password='Diamondbank1';Database=directde_appv2"
   }
 }
